# la-patate-chaude

./: Cargo.toml  test.py
client/src/: main.rs
server/src/: main.rs
shared/: Cargo.toml
shared/src/: hash_code.rs  lib.rs  messageStruct.rs  message_struct.rs  recover_secret.rs
